--- a/signupdekusu.css
+++ b/signupdekusu.css
@@ -213,71 +213,32 @@ input {
 
 @media (max-width: 768px) {
     .container {
-        flex-direction: column;
-        padding: 20px;
-        align-items: center;
-    }
-
-    .left-section {
-        padding: 10px;
-        align-items: center;
+        padding-top: 2vh; 
     }
 
     .logo {
-        width: 320px; /* Adjusted size */
+        width: 320px;
     }
 
     .login-box {
         width: 90%;
         padding: 15px;
-    }
-
-    h1 {
-        font-size: 20px;
-    }
-
-    .Login {
-        font-size: 1.5rem;
-    }
-
-    input {
-        padding: 10px;
-    }
-
-    .btn {
-        padding: 8px;
+        margin-top: -20px; 
     }
 }
 
 @media (max-width: 480px) {
     .container {
-        flex-direction: column;
-        padding: 10px;
-        align-items: center;
+        padding-top: 1vh;
     }
 
     .logo {
-        width: 300px; /* Logo remains big */
+        width: 300px;
     }
 
     .login-box {
         width: 95%;
-        padding: 0px;
-    }
-
-    h1 {
-        font-size: 18px;
-    }
-
-    .Login {
-        font-size: 1.3rem;
-    }
-
-    input {
-        padding: 8px;
-    }
-
-    .btn {
-        padding: 8px;
+        padding: 15px;
+        margin-top: -15px
     }
 }
