darkmode implementation in guest form

--- a/signupdekusu.css
+++ b/signupdekusu.css
@@ -14,6 +14,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     flex-wrap: wrap;
+    overflow: visible;
 }
 /* Fonts */
 .titillium-web-bold {
@@ -160,8 +161,6 @@ input {
 
 /* Dark mode styles */
 .dark-mode .container{
-    display: flex;
-    height: 100vh;
     background: linear-gradient(145deg, rgba(15,13,7,1) 44%, rgba(128,128,124,0.59) 100%), url(https://images.unsplash.com/photo-1494949649109-ecfc3b8c35df);
     background-position: right;
     background-repeat: no-repeat;
