--- a/signupdekusu.css
+++ b/signupdekusu.css
@@ -219,10 +219,11 @@ input {
 
     .logo {
         width: 320px;
+        margin-right: 50rem;
     }
 
     .login-box {
-        width: 90%;
+        width: 70%;
         padding: 15px;
         margin-top: -20px; 
     }
@@ -253,7 +254,7 @@ input {
     }
 
     .login-box {
-        width: 95%;
+        width: 70%;
         padding: 15px;
         margin-top: 0; 
     }
@@ -268,7 +269,7 @@ input {
     }
 
     .dark-mode .login-box {
-        width: 95%;
+        width: 80%;
         padding: 15px;
         margin-top: 0; 
     }
