--- a/signupdekusu.css
+++ b/signupdekusu.css
@@ -219,7 +219,7 @@ input {
 
     .logo {
         width: 320px;
-        margin-right: 50rem;
+        margin-bottom: 20px;
     }
 
     .login-box {
