--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -1,19 +1,3 @@
-/* General styling */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    background: linear-gradient(332deg, rgba(254,254,254,0) 0%, rgba(255,255,255,1) 50%), url("/Dekusu\ images/Main_Background.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 97.8vh;
-    overflow: hidden;
-}
-
 header{
     display: flex;
     justify-content: space-between;
@@ -38,7 +22,6 @@ header{
     font-style: normal;
 }
   
-
 a {
     font-family: "Titillium Web", sans-serif;
     text-decoration: none;
@@ -69,6 +52,7 @@ a{
     align-items: center;
     justify-content: center;
     text-align: center;
+    transition: all 0.3s ease-in-out;
 }
 
 .nav_contents li a.active {
@@ -76,74 +60,45 @@ a{
     box-shadow: 4px 4px 7px -5px rgba(0,0,0,0.75) inset;
     -webkit-box-shadow: 4px 4px 7px -5px rgba(0,0,0,0.75) inset;
     -moz-box-shadow: 4px 4px 7px -5px rgba(0,0,0,0.75) inset;
+    transition: all 0.3s ease-in-out;
 }
-
-h2{
-    align-items: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight:bolder;
-    text-align: center;
-    font-size: 9rem;
-}
-.TITLE{
-    padding-top: 25vh;
-}
-.ADNU, .Helpdesk{
-    color: #132C6F;
-}
-.DEKUSU, .Student{
-    color: #F6D784;
-}
-
-@media (max-width: 1043px) {
-    h2{
-        align-items: center;
-        font-family: 'Times New Roman', Times, serif;
-        font-weight:bolder;
-        text-align: center;
-        font-size: 3.5rem;
-    }
-}
-
-@media (max-width: 1043px) {
-    h2{
-        align-items: center;
-        font-family: 'Times New Roman', Times, serif;
-        font-weight:bolder;
-        text-align: center;
-        font-size: 3.5rem;
-    }
+.nav_contents svg{
+    margin: -5px;
+    margin-right: 1px;
 }
 
 @media (max-width: 480px) {
-    h2{
-        align-items: center;
-        font-family: 'Times New Roman', Times, serif;
-        font-weight:bolder;
-        text-align: center;
-        font-size: 3rem;
-    }
     .nav_contents li{
         display: inline-block;
         padding: 0px 0px;
+        font-size: 10px;
     }
     a{
         background-color: #5094D7;
         border-radius: 20px;
-        padding: 10px 6px;
+        padding: 9px 10px;
+        display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
+        height: 30px;
+        margin-top: 2px
     }
     header{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 30px 1%;
+        padding: 21px 1%;
         background: linear-gradient(90deg, rgba(19,44,111,1) 42%, rgba(210,217,240,1) 91%);
-        height: 40px;
+        height: 1px;
         border-radius: 1000px;
         margin: 20px;
+        width: 90%;
+    }
+    .nav_contents svg{
+        margin: -7px;
+        margin-right: 1px;
+        width: 15px;
     }
 
 }
