--- a/stylesheets/Profile_styles.css
+++ b/stylesheets/Profile_styles.css
@@ -13,20 +13,8 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 97.8vh;
-    overflow: hidden;
+    height: auto;
     transition: all 0.3s ease;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 0.5%;
-    background: linear-gradient(90deg, rgba(19,44,111,1) 42%, rgba(210,217,240,1) 91%);
-    height: 40px;
-    border-radius: 1000px;
-    margin: 20px;
 }
 
 /* Fonts */
@@ -41,49 +29,6 @@ header{
     font-weight: 400;
     font-style: normal;
 }
-
-
-a {
-    font-family: "Titillium Web", sans-serif;
-    text-decoration: none;
-    color: white;
-}
-
-.nav_contents{
-    list-style: none;
-}
-
-.nav_contents li{
-    display: inline-block;
-    padding: 0px 3px;
-}
-
-.nav_contents li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav_contents li a:hover {
-    background-color: #97C4EF;
-}
-
-a{
-    background-color: #5094D7;
-    border-radius: 20px;
-    padding: 8px 16px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-}
-
-.nav_contents li a.active {
-    background-color: #0B6FD1;
-    box-shadow: 4px 4px 7px -5px rgba(0,0,0,0.75) inset;
-    -webkit-box-shadow: 4px 4px 7px -5px rgba(0,0,0,0.75) inset;
-    -moz-box-shadow: 4px 4px 7px -5px rgba(0,0,0,0.75) inset;
-    transition: all 0.3s ease-in-out;
-}
-
 h2{
     align-items: center;
     font-family: 'Times New Roman', Times, serif;
@@ -283,15 +228,4 @@ h2{
         justify-content: center;
         text-align: center;
     }
-    header{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 30px 1%;
-        background: linear-gradient(90deg, rgba(19,44,111,1) 42%, rgba(210,217,240,1) 91%);
-        height: 40px;
-        border-radius: 1000px;
-        margin: 20px;
-    }
-
 }
