--- a/stylesheets/Profile_styles.css
+++ b/stylesheets/Profile_styles.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: all 0.3s ease;
+    transition: all 0.1s ease;
 }
 
 body{
@@ -13,8 +13,8 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: auto;
-    transition: all 0.3s ease;
+    height: 100vh;
+    transition: all 0.1s ease;
 }
 
 /* Fonts */
@@ -37,13 +37,6 @@ h2{
     font-size: 9rem;
 }
 
-.ADNU, .Helpdesk{
-    color: #132C6F;
-}
-.DEKUSU, .Student{
-    color: #F6D784;
-}
-
 #MAINCONTENT{
     font-family: Inter;
 }
@@ -63,28 +56,6 @@ h2{
     display: flex;
     gap: 10px;
     align-items: center;
-}
-
-.profile-btn {
-    background-color: #1e3a8a;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 8px 15px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    transition: all 0.3s ease;
-}
-
-.profile-btn:hover {
-    background-color: #142c6f;
-}
-
-.profile-btn img {
-    width: 20px;
-    height: 20px;
 }
 
 .main-content {
@@ -185,6 +156,78 @@ h2{
     width: 81.5%;
     margin-top: 5px;
     transition: all 0.3s ease;
+}
+
+/* Dark mode button */
+.dark-mode-btn {
+    position: absolute;
+    top: 5rem;
+    right: 25px;
+    background: none;
+    border: none;
+    font-size: 40px;
+    cursor: pointer;
+    color: #222222a9;
+    transition: all 0.3s ease;
+}
+.dark-mode .dark-mode-btn {
+    position: absolute;
+    top: 5rem;
+    right: 37px;
+    background: none;
+    border: none;
+    font-size: 35px;
+    cursor: pointer;
+    color: white;
+    transition: all 0.3s ease;    
+}
+.dark-mode {
+    background: #8a8a8a;
+    background: radial-gradient(circle, rgba(138, 138, 138, 0.97) 8%, rgba(0, 0, 0, 0.92) 89%),url(https://images.unsplash.com/photo-1494949649109-ecfc3b8c35df);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    transition: all 0.1s ease-in-out;
+}
+.dark-mode .profile-box{
+    background: #000000;
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0.21) 24%, rgba(186, 160, 71, 0.6) 100%);
+}
+.dark-mode .info-box{
+    background: #000000;
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0.21) 24%, rgba(186, 160, 71, 0.6) 100%);
+    color: white;
+}
+.dark-mode .info-box h3{
+    color: #d3d3d3;
+}
+.dark-mode .info-box2{
+    background: #000000;
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0.21) 24%, rgba(186, 160, 71, 0.6) 100%);
+    color: white;
+}
+.dark-mode .additional-box{
+    background: #000000;
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0.21) 24%, rgba(186, 160, 71, 0.6) 100%);
+    color: white;
+}
+.dark-mode #userName{
+    color: white;
+    font-size: 2em;
+    margin-top: -15px;
+}
+.dark-mode #userYear{
+    color: #d3d3d3;
+    font-size: 1em;
+    margin-top: 10px;
+}
+.dark-mode #userID{
+    color: #d3d3d3;
+    font-size: em;
+}
+.dark-mode .contact-info{
+    color: white;
 }
 
 
