--- a/stylesheets/dashboard.css
+++ b/stylesheets/dashboard.css
@@ -33,6 +33,49 @@ h2{
     color: #F6D784;
 }
 
+/* Dark mode button */
+.dark-mode-btn {
+    position: absolute;
+    top: 5rem;
+    right: 25px;
+    background: none;
+    border: none;
+    font-size: 40px;
+    cursor: pointer;
+    color: #222222a9;
+    transition: all 0.3s ease;
+}
+.dark-mode .dark-mode-btn{
+    position: absolute;
+    top: 5rem;
+    right: 37px;
+    background: none;
+    border: none;
+    font-size: 35px;
+    cursor: pointer;
+    color: white;
+    transition: all 0.3s ease;
+    
+}
+
+/* Dark mode styles */
+.dark-mode{
+    background: #8a8a8a;
+    background: radial-gradient(circle, rgba(138, 138, 138, 0.97) 8%, rgba(0, 0, 0, 0.92) 89%),url(https://images.unsplash.com/photo-1494949649109-ecfc3b8c35df);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    overflow:hidden;
+}
+
+.dark-mode .ADNU{
+    color: #3068FF;
+}
+.dark-mode .Helpdesk{
+    color: #3068FF;
+}
+
 @media (max-width: 1043px) {
     h2{
         align-items: center;
