--- a/stylesheets/navbar2.css
+++ b/stylesheets/navbar2.css
@@ -1,6 +1,7 @@
 header{
     position: sticky;
     top: 0;
+    transition: 0.1s ease;
 }
 nav {
     background: linear-gradient(90deg, rgba(19,44,111,1) 42%, rgba(210,217,240,1) 91%);
@@ -11,6 +12,8 @@ nav {
     height: 40px;
     border-radius: 1000px;
     margin: 20px;
+    transition: 0.1s ease;
+    
 }
 
 .nav_contents {
@@ -51,8 +54,8 @@ nav {
     text-decoration: none;
     color: #e3e3e3;
     font-family: "Titillium Web", sans-serif;
-    font-weight: 400;
-    gap: 8px;
+    font-weight: 650;
+    gap: 1.5px;
 }
 
 .nav_contents svg {
@@ -67,4 +70,25 @@ nav {
 
 .nav_contents li:not(:hover) .nav-text {
     display: none;
+}
+
+.dark-mode nav{
+    background: #F6D784;
+    background: linear-gradient(90deg,rgba(246, 215, 132, 1) 42%, rgba(66, 85, 149, 1) 100%);
+}
+
+.dark-mode .nav_contents li{
+    background-color: #FFEAA4;
+}
+.dark-mode .nav_contents svg{
+    fill: black;
+}
+.dark-mode .nav_contents a{
+    color: black;
+}
+.dark-mode .nav_contents li:hover{
+    background-color: #FFF3CC;
+}
+.dark-mode .nav_contents li.active{
+    background-color: #C1A64A;
 }
