--- a/stylesheets/notification.css
+++ b/stylesheets/notification.css
@@ -51,6 +51,55 @@ article{
     align-content: center;
 }
 
+/* Dark mode button */
+.dark-mode-btn {
+    position: absolute;
+    top: 5rem;
+    right: 25px;
+    background: none;
+    border: none;
+    font-size: 40px;
+    cursor: pointer;
+    color: #222222a9;
+    transition: all 0.3s ease;
+}
+.dark-mode .dark-mode-btn{
+    position: absolute;
+    top: 5rem;
+    right: 37px;
+    background: none;
+    border: none;
+    font-size: 35px;
+    cursor: pointer;
+    color: white;
+    transition: all 0.3s ease;
+    
+}
+
+/* Dark mode styles */
+.dark-mode{
+    background: #8a8a8a;
+    background: radial-gradient(circle, rgba(138, 138, 138, 0.97) 8%, rgba(0, 0, 0, 0.92) 89%),url(https://images.unsplash.com/photo-1494949649109-ecfc3b8c35df);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    transition: all 0.3s ease;
+}
+.dark-mode article{
+    border-radius: 15px;
+    padding: 15px;
+    margin: 5px;
+    background: #000000;
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0.21) 24%, rgba(186, 160, 71, 0.6) 100%);
+    font-family: "Titillium Web";
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: #BAA047;
+    border-radius: 10px;
+    align-content: center;
+    color: white;
+}
+
 @media (max-width: 1043px) {
     h2{
         align-items: center;
